test: 모든 통합 테스트가 IntegrationTestSupport 사용하도록 수정